test/analysis/accept/pattern-literal.ptk


pattern a_word = literal "a-word";

