test/analysis/reject/duplicate-pattern.ptk
# expected: E1302
pattern foo = literal "bla";
pattern foo = literal "bla";